--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -78,6 +78,9 @@ flutter:
     - images/home.jpeg
     - images/google.png
     - images/home.png
+    - images/property1.jpg
+    - images/property2.jpg
+    - images/property3.jpg
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
