--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -87,6 +87,10 @@ flutter:
     - images/property2.jpg
     - images/property3.jpg
     - images/postAdd.jpg
+    - images/ahadbuilder.png
+    - images/alahmad.png
+    - images/Countrybuilder.png
+    - images/dha.png
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
