--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -89,7 +89,7 @@ flutter:
     - images/postAdd.jpg
     - images/ahadbuilder.png
     - images/alahmad.png
-    - images/Countrybuilder.png
+    - images/bahriatown.png
     - images/dha.png
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
