--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   scrollable_list_tabview: ^0.1.6
   animated_splash_screen: ^1.1.0
   firebase_auth: ^3.5.1
+  email_validator: ^2.1.16
   cloud_firestore: ^3.4.1
 
 dev_dependencies:
