--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -51,6 +51,7 @@ dependencies:
   #state managment
   provider: ^6.0.3
   url_launcher: ^6.1.5
+  rating_dialog: ^2.0.4
 
 dev_dependencies:
   flutter_test:
