--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,7 +37,7 @@ dependencies:
   tuple: ^2.0.0
   country_picker: ^2.0.15
   dropdown_button2: ^1.7.1
-
+  lottie: ^1.4.1
   share: ^0.6.3+6
   flutter_share: ^2.0.0
   another_xlider: ^1.0.0
