--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -104,6 +104,8 @@ flutter:
     - images/bahriatown.png
     - images/dha.png
     - images/logo3.jpeg
+    - images/quoto.png
+
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
