--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -83,6 +83,7 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
+    - images/male.png
     - images/DHA.jpg
     - images/fbb.jpg
     - images/construction.jpg
